# sipxecs

./: .gitmodules  .modules-include  README
config/: revision-gen  sipXlib2.m4
epel/: .sipxecs.mk
sipXyealink/: .classpath  .project  Makefile.am  configure.ac  sipxyealink.spec.in
sipXyealink/etc/: Makefile
sipXyealink/etc/yealink/: config_v72.vm  line-72.properties  line-73.xml  line-80.properties  phone-70.properties  types.xml
sipXyealink/etc/yealinkPhone/: button_types.xml  config_v70.prov.xml.vm  config_v7x.cfg.vm  config_v7x.prov.xml.vm  config_v7x.vm  config_v7x_T2xP.prov.xml.vm  config_v7x_T3xG.prov.xml.vm  directory.xml.vm  line-72.xml  line-80.xml  line.xml  phone-73.xml  phone-7X.properties  phone-7X.xml  phone-80.properties  phone.properties  phone.xml  phone_en.properties  types.xml
sipXyealink/src/: .javac-yealink-files  Makefile  Makefile.am  ant-targets.am  ant-targets.xml  build.xml  common.am  sipxplugin.beans.xml
sipXyealink/src/org/sipfoundry/sipxconfig/phone/yealink/: YealinkConstants.java  YealinkDeviceConfiguration.java  YealinkDirectoryConfiguration.java  YealinkLineDefaults.java  YealinkModel.java  YealinkPhone.java  yealinkConstants.java  yealinkDeviceConfiguration.java  yealinkDirectoryConfiguration.java  yealinkLineDefaults.java  yealinkModel.java  yealinkPhone.java  yealinkPhoneDefaults.java  yealinkXmlConfiguration.java
sipXyealink/src/org/sipfoundry/sipxconfig/phone/yealink/speeddials/: yealinkSpeedDialManager.java  yealinkSpeedDialProcessor.java
sipXyealink/src/org/sipfoundry/sipxconfig/upload/yealink/: YealinkUpload.java
(+206 files in other folders)
